--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -51,10 +51,6 @@ main {
   }
 }
 
-.swiper-pagination-bullet-active {
-  background-color: $orange !important;
-}
-
 a {
   color: inherit;
   text-decoration: none;
